force-app/main/default/objects/Case_Managment__mdt/Case_Managment__mdt.object-meta.xml
<CustomObject>
    <description>MIS-7386 GM Owner Approval Process Update In Case</description>
    <label>Case Managment</label>
    <pluralLabel>Cases Managment</pluralLabel>
</CustomObject>