force-app/main/default/objects/Case_Managment__mdt/fields/Auto_Child_Case__c.field-meta.xml
<CustomField>
    <fullName>Auto_Child_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Child Case</label>
    <type>Checkbox</type>
</CustomField>