force-app/main/default/objects/Case_Managment__mdt/fields/Auto_Close_Parent__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Close Parent</label>
    <type>Checkbox</type>
</CustomField>