force-app/main/default/objects/Case_Managment__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
                <default>true</default>
                <label>Quote</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Extension (Temporary, Permanent, Trial)</fullName>
            </value>
            <value>
                <fullName>Non-Standard/Custom Contract</fullName>
            </value>
            <value>
                <fullName>Review Contract Redlines</fullName>
            </value>
            <value>
                <fullName>Customer Paper [NDA/MSA/Service Order]</fullName>
            </value>
            <value>
                <fullName>Similarweb MSA</fullName>
            </value>
            <value>
                <fullName>Signature(s)</fullName>
            </value>
            <value>
                <fullName>Amendment [Amend a Signed Contract]</fullName>
            </value>
            <value>
                <fullName>DDQ (Due Diligence / Security Questionnaire)</fullName>
            </value>
            <value>
                <fullName>Company Documents (e.g. SOC 2, SOC 3, COI, Bank Letter)</fullName>
            </value>
            <value>
                <fullName>Customer Access</fullName>
            </value>
            <value>
                <fullName>Update Customer Information</fullName>
            </value>
            <value>
                <fullName>Customer Invoice(s)/Collections</fullName>
            </value>
            <value>
                <fullName>Customer Vendor Form</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Opp Review: One-Time Product</fullName>
            </value>
            <value>
                <fullName>Contract Signed Manually - Quote for Deal Desk Review</fullName>
            </value>
            <value>
                <fullName>Salesops Ticket Form</fullName>
            </value>
            <value>
                <fullName>User Management</fullName>
            </value>
            <value>
                <fullName>BI Ticket</fullName>
            </value>
            <value>
                <fullName>NT Cancellation</fullName>
            </value>
            <value>
                <fullName>Direct Email</fullName>
            </value>
            <value>
                <fullName>Payment Processor</fullName>
            </value>
            <value>
                <fullName>Invoicing Portals</fullName>
            </value>
            <value>
                <fullName>Internal Billing Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>