force-app/main/default/objects/Case_Managment__mdt/fields/cmtd_type__c.field-meta.xml
<CustomField>
    <fullName>cmtd_type__c</fullName>
    <label>cmtd type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Type Management</fullName>
                <default>true</default>
                <label>Case Type Management</label>
            </value>
            <value>
                <fullName>Approval Process - GM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>