force-app/main/default/objects/Case_Managment__mdt/fields/GM_Approver_Type__c.field-meta.xml
<CustomField>
    <fullName>GM_Approver_Type__c</fullName>
    <label>GM Approver Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>