force-app/main/default/objects/Case_Managment__mdt/fields/GM_Approver_Value__c.field-meta.xml
<CustomField>
    <fullName>GM_Approver_Value__c</fullName>
    <label>GM Approver Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>