force-app/main/default/objects/Case_Managment__mdt/fields/Update_Parent_To_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Update_Parent_To_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Parent To In Progress</label>
    <type>Checkbox</type>
</CustomField>