force-app/main/default/objects/Case_Managment__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Auto_Child_Case__c</columns>
    <columns>Auto_Close_Parent__c</columns>
    <columns>Case_Type__c</columns>
    <columns>cmtd_type__c</columns>
    <columns>GM_Approver_Type__c</columns>
    <columns>GM_Approver_Value__c</columns>
    <columns>Role_Name__c</columns>
    <columns>Update_Parent_To_In_Progress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>